--- a/bootstrap/customize/index.html
+++ b/bootstrap/customize/index.html
@@ -25,21 +25,10 @@
 
 <link href="../assets/css/docs.min.css" rel="stylesheet">
 
-<!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-<script src="../assets/js/ie-emulation-modes-warning.js"></script>
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-  <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
 
 <!-- Favicons -->
 <link rel="apple-touch-icon" href="../apple-touch-icon.png">
 <link rel="icon" href="../favicon.ico">
-<script>
-  var _hmt = _hmt || [];
-</script>
   </head>
   <body>
     <a id="skippy" class="sr-only sr-only-focusable" href="index.html#content"><div class="container"><span class="skiplink-text">Skip to main content</span></div></a>
@@ -59,24 +48,24 @@
     <nav id="bs-navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="../getting-started.1" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-起步'])">起步</a>
+          <a href="../getting-started.1">起步</a>
         </li>
         <li>
-          <a href="../css/index.html" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-全局CSS样式'])">全局 CSS 样式</a>
+          <a href="../css/index.html">全局 CSS 样式</a>
         </li>
         <li>
-          <a href="../components.1" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-组件'])">组件</a>
+          <a href="../components.1">组件</a>
         </li>
         <li>
-          <a href="../javascript/index.html" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-JavaScript插件'])">JavaScript 插件</a>
+          <a href="../javascript/index.html">JavaScript 插件</a>
         </li>
         <li class="active">
-          <a href="index.html" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-定制'])">定制</a>
+          <a href="index.html">定制</a>
         </li>
-        <li><a href="//expo.bootcss.com" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-网站实例'])" target="_blank">网站实例</a></li>
+
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="//www.bootcss.com/" onclick="_hmt.push(['_trackEvent', 'docv3-navbar', 'click', 'V3导航-Bootstrap中文网'])" target="_blank">Bootstrap中文网</a></li>
+        <li><a href="//www.bootcss.com/" target="_blank">Bootstrap中文网</a></li>
       </ul>
     </nav>
   </div>
@@ -2459,42 +2448,5 @@
   </div>
 </footer>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-
-
-  <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-
-
-  <script src="../assets/js/docs.min.js"></script>
-
-
-
-  <script>var __configBridge = {"autoprefixerBrowsers":["Android 2.3","Android >= 4","Chrome >= 20","Firefox >= 24","Explorer >= 8","iOS >= 6","Opera >= 12","Safari >= 6"],"jqueryCheck":["if (typeof jQuery === 'undefined') {","  throw new Error('Bootstrap\\'s JavaScript requires jQuery')","}\n"],"jqueryVersionCheck":["+function ($) {","  'use strict';","  var version = $.fn.jquery.split(' ')[0].split('.')","  if ((version[0] < 2 && version[1] < 9) || (version[0] == 1 && version[1] == 9 && version[2] < 1)) {","    throw new Error('Bootstrap\\'s JavaScript requires jQuery version 1.9.1 or higher')","  }","}(jQuery);\n\n"]}</script>
-
-    <script src="../assets/js/customize.min.js"></script>
-
-
-
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
-
-
-
-<!-- Analytics
-================================================== -->
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " //");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fbdb993b828cbe079a7fbc1a951f44726' type='text/javascript'%3E%3C/script%3E"));
-</script>
-
-<!-- 全局统计代码 -->
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " //");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F079fac161efc4b2a6f31e80064f14e82' type='text/javascript'%3E%3C/script%3E"));
-</script>
   </body>
 </html>
