--- a/lodash/index.html
+++ b/lodash/index.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>lodash documentation</title>
-  <link rel="stylesheet" href="_css/main.css?20160216">
+  <link rel="stylesheet" href="_css/main.css">
   <link rel="feed alternate" type="application/atom+xml" href="https://github.com/lodash/lodash/commits/master.atom">
   <!--[if lt IE 9]><script src="/_js/html5.js"></script><![endif]-->
  </head>
  <body>
-<h1><a href="index.html">lodash</a> <span>v<select onchange="location.href=this.selectedIndex?('https://github.com/lodash/lodash/blob/'+this.options[this.selectedIndex].value+'/doc/README.md'):'/docs'"><option value="4.5.0" selected>4.5.0</option><option value="3.10.1">3.10.1</option><option value="2.4.2">2.4.2</option><option value="1.3.1">1.3.1</option></select></span></h1>
+<h1><a href="index.html">lodash</a> </h1>
 <div class="toc-container">
-<script src="https://cdn.carbonads.com/carbon.js?zoneid=1673&amp;serve=C6AILKT&amp;placement=lodashcom" id="_carbonads_js" async></script>
 <div>
 <h2 class="first-heading"><code>Array</code></h2>
 <ul>
@@ -5467,7 +5466,6 @@ alternative delimiters.</p>
 </div>
 </div>
   <footer></footer>
-  <script src="_js/lodash.js?20160216"></script>
-  <script>_gaq=[['_setAccount','UA-6065217-64'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'))</script>
+  <script src="_js/lodash.js"></script>
  </body>
 </html>
