--- a/bootstrap/javascript/index.html
+++ b/bootstrap/javascript/index.html
@@ -45,21 +45,21 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="../index.html" class="navbar-brand">Bootstrap</a>
+      <a href="../index.html?@cache1" class="navbar-brand">Bootstrap</a>
     </div>
     <nav id="bs-navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="../getting-started.1">起步</a>
+          <a href="../getting-started.1?@cache1">起步</a>
         </li>
         <li>
-          <a href="../css/index.html">全局 CSS 样式</a>
+          <a href="../css/index.html?@cache1">全局 CSS 样式</a>
         </li>
         <li>
-          <a href="../components.1">组件</a>
+          <a href="../components.1?@cache1">组件</a>
         </li>
         <li class="active">
-          <a href="index.html">JavaScript 插件</a>
+          <a href="index.html?@cache1">JavaScript 插件</a>
         </li>
 
 
