--- a/lodash/index.html
+++ b/lodash/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>lodash documentation</title>
-  <link rel="stylesheet" href="_css/main.css">
+  <link rel="stylesheet" href="_css/main.css?@cache1">
   <link rel="feed alternate" type="application/atom+xml" href="https://github.com/lodash/lodash/commits/master.atom">
   <!--[if lt IE 9]><script src="/_js/html5.js"></script><![endif]-->
  </head>
@@ -5466,6 +5466,6 @@ alternative delimiters.</p>
 </div>
 </div>
   <footer></footer>
-  <script src="_js/lodash.js"></script>
+  <script src="_js/lodash.js?@cache1"></script>
  </body>
 </html>
